# Patrones

./: main.py  pyproject.toml
creacionales/builder/: Readme.md  game.py
creacionales/builder/our_case/: main.py
creacionales/factory/: Readme.md  explanation.py  game.py
creacionales/factory/our_case/: base.py  main.py
creacionales/factory/our_case/scrappers/: playwright_scrapper.py  selenium_scrapper.py
creacionales/prototype/: Readme.md  game.py  main.py
creacionales/singleton/: Readme.md  game.py  our_case.py
interfaces/: Readme.md
