[tool.poetry]
name = "patrones"
version = "0.1.0"
description = ""
authors = ["Nico <nrondon@tusdatos.co>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.15.2"
webdriver-manager = "^4.0.1"
playwright = "^1.40.0"
mongoengine = "^0.27.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

